# YaneuraOu

./: .gitignore
docs/: eval_dependency_audit.md  eval_value_contract.md  refactor_roadmap.md  verification_checkpoints.md
source/: Makefile  config.h  engine.cpp  engine.h  numa.h  position.cpp  position.h  search.cpp  search.h  thread.cpp  thread.h  tt.cpp  tt.h  usi.cpp  usi.h  usioption.h
source/book/: makebook2015.cpp
source/engine/dlshogi-engine/: FukauraOuEngine.cpp  FukauraOuEngine.h  dlshogi_searcher.cpp
source/engine/tanuki-mate-engine/: tanuki-mate-search.cpp
source/engine/user-engine/: user-search.cpp
source/engine/yaneuraou-engine/: yaneuraou-search.cpp  yaneuraou-search.h
source/engine/yaneuraou-mate-engine/: yaneuraou-mate-search.cpp
source/eval/kpp_kkpt/: evaluate_kpp_kkpt.cpp
source/eval/kppt/: evaluate_kppt.cpp
source/eval/material/: evaluate_material.cpp
source/eval/nnue/: evaluate_nnue.cpp  evaluate_nnue.h  nnue_feature_transformer.h
source/eval/nnue/architectures/: halfkp_256x2-32-32.h  nnue_arch_gen.py  sfnnwop-1536.h
source/eval/nnue/features/: feature_set.h  half_kp.cpp  half_kp_vm.cpp  half_kpe9.cpp  half_relative_kp.cpp  k.cpp  p.cpp  pe9.cpp
source/extra/: sfen_packer.cpp
source/learn/: learn.h  learner.cpp  learning_tools.cpp  multi_think.cpp
source/mate/: mate_move_picker.h
source/testcmd/: mate_test_cmd.cpp  unit_test.cpp
yaneuraou_python/: CMakeLists.txt  README.md  build.sh  pyproject.toml  test_mate.py
yaneuraou_python/src/yaneuraou_wrapper/: wrapper.cpp
yaneuraou_python/tools/: engine_invoker.py  requirements.txt  selfplay_to_csa.py  selfplay_wsl2_sample.sh  sprt_invoker.py
